# SublimeGHCi

./: .drone.yml  .gitignore  .travis.yml  Common.py  ErrorReporter.py  ExecutableProvider.py  GHCiCommands.py  GHCiConnection.py  GHCiManager.py  HaskellFile.py  HaskellView.py  HaskellViewManager.py  Highlights.py  InsertText.py  IntegTests.py  LoadedGHCiCommands.py  OutputPanel.py  Preferences.sublime-settings  Settings.py  SharedGHCi.py  SublimeGHCi.py  SublimeTextCommands.py  TestRunner.py  ViewGHCis.py  circle.yml  circleci-docker-cache.sh  circleci.sh  fix_integ_test_files.sh  output  readme.md  run_all_tests.sh  run_docker_local.sh  run_integ_tests.sh  run_integ_tests_locally.sh  run_test.sh  run_travis_ci.sh  run_unit_tests.sh
common/: CreatingCache.py  EventHook.py  Fallible.py  Regexes.py  ViewCache.py  WindowCache.py
completions/: Completor.py  CompletorFactory.py  ModulePrefixCompletor.py  NoStringCompletor.py  OutputCompletor.py  TypeAddingCompletor.py  TypeMatchingCompletor.py  defaults.py
controllers/: CachingControllerFactory.py  Controller.py  ControllerFactory.py  ControllerManager.py  defaults.py
docker/: Dockerfile  startXvfb.sh
error_reporters/: ErrorReporter.py  ErrorReporterFactory.py  NullErrorReporter.py
ghci/: GHCiConnection.py  (+13 more)
integ_tests/Completions/MultipleSourceDirs/: MultipleSourceDirs.cabal
integ_tests/Completions/MultipleSourceDirs/src1/: One.hs
integ_tests/Completions/MultipleSourceDirs/src2/: Two.hs
integ_tests/Haskell/BrokenCabalFile/: BrokenCabalFile.cabal
integ_tests/Haskell/MultipleModules/: MultipleModules.cabal
(+85 files in other folders)
