name:                MultipleModules
version:             0.1.0.0
author:              integ_test
maintainer:          a@a.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     FirstModule, SecondModule
  build-depends:       base    
  default-language:    Haskell2010